Fix wrong sizes of Card component

--- a/src/components/OurServices/OurServices.css
+++ b/src/components/OurServices/OurServices.css
@@ -1,7 +1,7 @@
 #services {
   margin-top: 84px;
   margin-left: 10%;
-  margin-right: 5%;
+  margin-right: 10%;
 }
 
 #services-title {
